--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -40,81 +40,80 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Uruchom Bluetooth"
+        android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eHealthCareLabel"
-        android:textAllCaps="false"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
-        app:layout_constraintVertical_bias="0.5"/>
-
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/bleButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:typeface="sans"
+        android:background="@drawable/rectangle_field3"
         android:text="Pomiary BLE"
         android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/manualButton"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
-        app:layout_constraintVertical_bias="0.5"/>
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/resultHeartButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:typeface="sans"
         android:layout_marginTop="4dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Analiza wyników tętna"
         android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultGlucoseButton"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
-        app:layout_constraintVertical_bias="0.5"/>
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/downloadButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Pobierz wyniki"
-        android:typeface="sans"
         android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultHeartButton"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
-        app:layout_constraintVertical_bias="0.5"/>
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/logout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Wyloguj się"
-        android:typeface="sans"
         android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disableBluetoothButton"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
-        app:layout_constraintVertical_bias="0.5"/>
+        app:layout_constraintVertical_bias="0.5" />
 
 
     <TextView
@@ -122,33 +121,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:typeface="sans"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/logout"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logout" />
 
     <Button
         android:id="@+id/resultGlucoseButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Analiza wyników glukozy"
         android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bleButton"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
-        app:layout_constraintVertical_bias="0.5"/>
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/disableBluetoothButton"
         android:layout_width="0dp"
-        android:layout_marginTop="4dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:background="@drawable/rectangle_field3"
         android:text="Wyłącz Bluetooth"
         android:textAllCaps="false"
@@ -166,15 +165,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Pomiary ręczne"
-        android:typeface="sans"
         android:textAllCaps="false"
+        android:textColor="#4E057E"
         android:textSize="20sp"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btON"
-        android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"/>
+        app:layout_constraintTop_toBottomOf="@+id/btON" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalCenter"
