--- a/app/src/main/res/layout/ble_measure.xml
+++ b/app/src/main/res/layout/ble_measure.xml
@@ -1,45 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#888A66CD"
     android:layout_height="match_parent"
+    android:background="#888A66CD"
     tools:context=".BLEMeasure">
 
     <TextView
         android:id="@+id/headerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:typeface="sans"
-        android:gravity="center"
-        android:textColor="#4E057E"
-        android:textStyle="bold"
-        android:text="Pomiary BLE"
-        android:textSize="24sp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:text="Pomiary BLE"
+        android:textColor="#4E057E"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/datePickerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Data pomiaru"
         android:textAllCaps="false"
         android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
         android:textSize="12sp"
         android:typeface="sans"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.007"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />
 
+    <TextView
+        android:id="@+id/detailsTextView"
+        android:layout_width="match_parent"
+        android:layout_height="131dp"
+        android:layout_marginTop="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="Uwaga: przed połączeniem aplikacji z Raspberry Pi Pico upewnij się, że usługa Bluetooth Low Energy jest włączona na urządzeniu pomiarowym."
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />
 
+    <TextView
+        android:id="@+id/selectedDateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text=""
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/datePickerButton"
+        app:layout_constraintStart_toEndOf="@+id/datePickerButton"
+        app:layout_constraintTop_toTopOf="@+id/datePickerButton" />
 
     <ImageView
         android:id="@+id/iconImageView"
@@ -54,17 +77,19 @@
 
     <Button
         android:id="@+id/connectToRaspberryButton"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Połącz z Raspberry"
         android:textAllCaps="false"
         android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"
         android:textSize="12sp"
         android:typeface="sans"
-        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -72,247 +97,62 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
+        app:layout_constraintTop_toBottomOf="@+id/connectToRaspberryButton"
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:orientation="vertical">
-
-            <!-- Pomiar 1 -->
 
             <TextView
                 android:id="@+id/measurement1TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="Pomiar 1 - godz. 08:00"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:paddingStart="18dp"
+                android:paddingEnd="16dp"
+                android:text="Wykonaj pomiar tętna z wykorzystaniem Raspberry Pi Pico, a następnie odczytaj uzyskaną wartość za pomocą poniższego przycisku. Otrzymany wynik wyrażony jest w jednostce bpm."
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="18sp"
+                android:typeface="sans"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
             <Button
-                android:id="@+id/tetno1Button"
-                android:layout_width="wrap_content"
+                android:id="@+id/heart1Button"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="110dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/rectangle_field3"
-                android:text="POMIAR TĘTNA"
+                android:text="Odczytaj pomiar"
                 android:textAllCaps="false"
                 android:textColor="#4E057E"
                 android:textSize="12sp"
                 android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/measurement1TextView" />
 
-            <Button
-                android:id="@+id/glukoza1Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR GLUKOZY"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tetno1Button" />
-
-            <!-- Pomiar 2 -->
             <TextView
-                android:id="@+id/measurement2TextView"
+                android:id="@+id/measurementValueTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="Pomiar 2 - godz. 11:00"
+                android:layout_marginStart="155dp"
+                android:layout_marginTop="13dp"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/heart1Button"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/glukoza1Button" />
+                app:layout_constraintStart_toEndOf="@+id/heart1Button"
+                app:layout_constraintTop_toTopOf="@+id/heart1Button" />
 
-            <Button
-                android:id="@+id/tetno2Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR TĘTNA"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/measurement2TextView" />
-
-            <Button
-                android:id="@+id/glukoza2Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR GLUKOZY"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tetno2Button" />
-
-            <!-- Pomiar 3 -->
-            <TextView
-                android:id="@+id/measurement3TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="Pomiar 3 - godz. 14:00"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/glukoza2Button" />
-
-            <Button
-                android:id="@+id/tetno3Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR TĘTNA"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/measurement3TextView" />
-
-            <Button
-                android:id="@+id/glukoza3Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR GLUKOZY"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tetno3Button" />
-
-            <!-- Pomiar 4 -->
-            <TextView
-                android:id="@+id/measurement4TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="Pomiar 4 - godz. 17:00"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/glukoza3Button" />
-
-            <Button
-                android:id="@+id/tetno4Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR TĘTNA"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/measurement4TextView" />
-
-            <Button
-                android:id="@+id/glukoza4Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR GLUKOZY"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tetno4Button" />
-
-            <!-- Pomiar 5 -->
-            <TextView
-                android:id="@+id/measurement5TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="Pomiar 5 - godz. 20:00"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/glukoza4Button" />
-
-            <Button
-                android:id="@+id/tetno5Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR TĘTNA"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/measurement5TextView" />
-
-            <Button
-                android:id="@+id/glukoza5Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rectangle_field3"
-                android:text="POMIAR GLUKOZY"
-                android:textAllCaps="false"
-                android:textColor="#4E057E"
-                android:textSize="12sp"
-                android:typeface="sans"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tetno5Button" />
 
         </LinearLayout>
     </ScrollView>
@@ -330,43 +170,14 @@
 
         <Button
             android:id="@+id/bleMeasurementBackButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:typeface="sans"
-            android:text="Powrót"
-            android:textColor="#4E057E"
-            android:background="@drawable/rectangle_field3"
-            android:textAllCaps="false"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/saveButton" />
-
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:typeface="sans"
-            android:text="Zapisz"
-            android:textAllCaps="false"
-            android:textColor="#4E057E"
-            android:background="@drawable/rectangle_field3"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/clearButton" />
-
-        <Button
-            android:id="@+id/clearButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:typeface="sans"
-            android:text="Wyczyść"
+            android:background="@drawable/rectangle_field3"
+            android:text="Powrót"
             android:textAllCaps="false"
             android:textColor="#4E057E"
-            android:background="@drawable/rectangle_field3"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent" />
-
+            android:typeface="sans"
+            app:layout_constraintEnd_toStartOf="@+id/saveButton" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
